--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -4,18 +4,19 @@
         <!-- Your content goes here -->
         <h1 class="mt-5">{{msg}}</h1>
     </div>
-    <img *ngIf="yesimag" class="happy"src="../../../assets/tobiobito.gif" alt="">
+    <img *ngIf="yesimag" class="happy"src="../../../assets/to.gif" alt="tobitoimage">
     <div class="billa">
         <button class="btn btn-info me-3 custombutton1" (click)="toggleyes()">YES</button>
         <!-- <button class="btn btn-info ms-3 custombutton">NO</button> -->
         <!-- app.component.html -->
         <button *ngIf="buttonhide" class="btn btn-info ms-3 custombutton" [style.top]="buttonPosition.top"
             [style.left]="buttonPosition.left" [class.animation-class]="performAnimation" (click)="toggleAnimation()">NO</button>
-
-<!-- app.component.html -->
-<!-- app.component.html -->
-<!-- app.component.html -->
-<!-- <button [class.animation-class]="performAnimation" (click)="toggleAnimation()">Click me</button> -->
-
+            
+            <!-- app.component.html -->
+            <!-- app.component.html -->
+            <!-- app.component.html -->
+            <!-- <button [class.animation-class]="performAnimation" (click)="toggleAnimation()">Click me</button> -->
+            
+        </div>
     </div>
-</div>
+    <!-- <img src="../../../assets/to.gif" alt=""> -->
